--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import Card from '../components/Card.astro';
 				<div class=" h-1 bg-[#549ef2]"></div>
 
 				<div class=" p-6 space-y-5">
-				<h1 class=" text-2xl font-medium">Calcularor</h1>
+				<h1 class=" text-2xl font-medium">Calculator</h1>
 				<p class=" text-sm text-[#a3a5ae] font-light">Uses data from past projects to provide better delivery estimates</p>
 
 				<div class=" flex flex-grow justify-end">
@@ -167,7 +167,7 @@ import Card from '../components/Card.astro';
 			   <div class=" h-1 bg-[#549ef2]"></div>
 
 			   <div class=" p-6 space-y-5">
-			   <h1 class=" text-2xl font-medium">Calcularor</h1>
+			   <h1 class=" text-2xl font-medium">Calculator</h1>
 			   <p class=" text-sm text-[#a3a5ae] font-light">Uses data from past projects to provide better delivery estimates</p>
 
 			   <div class=" flex flex-grow justify-end">
